# horizop-ECSACP1-firmware

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old
include/: secrets.h
main/: .cproject  CMakeLists.txt  Kconfig.projbuild  LED.cpp  LED.h  adc.cpp  adc.h  contactor.cpp  logger.h  main.cpp  sensor_current.cpp
